Fixed bootstrap carousel styling issues with classNames on components (not allowed)

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -38,7 +38,7 @@ code {
     font-size: 3em;
 }
 
-.water:hover, .water:checked{
+.water:hover, .water:focus{
     color: #3153EA;
     border-radius: 50px;
 }
