--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Timmana');
+
 body {
   margin: 0;
   padding: 0;
@@ -13,65 +15,11 @@ code {
     monospace;
 }
 
-.mood, .sleep, .eat, .water, .alcohol, .caffeine {
-    -webkit-appearance: none;
-    border: none;
-    cursor: pointer;
-    margin: 0 5px;
-    transition: all .2s ease;
-    outline: none;
-    font-size: 4em;
-    color:gray;
-}
-
-.sleep {
-    font-weight: bolder;
-    font-family: 'Timmana', sans-serif;
-}
-
-.mood:hover, .mood:checked, .sleep:hover, .sleep:checked {
-    color: #FF4099;
-    border-radius: 50px;
-}
-
-
-.water:hover, .water:checked{
-    color: #3153EA;
-    border-radius: 50px;
-}
-
-#water1, #caffeine1, #alcohol1 {
-    font-size: 2em;
-}
-
-#water2, #caffeine2, #alcohol2 {
-    font-size: 3em;
-}
-
-#water3, #caffeine3, #alchohol3 {
-    font-size: 4em;
-}
-
-.eat:hover, .eat:checked {
-    color: #FF4099;
-    border-radius: 50px;
-}
-
-.alcohol:hover, .alcohol:checked {
-    color: #FFD016;
-    border-radius: 50px;
-}
-
-.caffeine:hover, .caffine:checked {
-    color: rgb(83, 70, 70);
-    border-radius: 50px;
-}
-
-* {
+*{
     box-sizing: border-box;
 }
 
-body {
+body{
     display: flex;
     width: 1000px;
     justify-items: center;
@@ -91,23 +39,23 @@ body {
 }
 
 
-.box {
+.box{
     margin: 5px;
     padding: 45px 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 35px 35px 0 35px;
-    width: 500px;
+    width: 700px;
 }
 
-.box1 {
+.box1{
     background-color: white;
     box-shadow: 2px 2px 4px lightgray;
 }
 
 
-.box1 h1 {
+.box1 h1{
     color: #FF4099;
     font-size: 72px;
     font-family: 'Timmana', sans-serif;
@@ -124,7 +72,7 @@ body {
     justify-content: space-evenly;
 }
 
-.form-text {
+.form-text{
     font-family: 'Timmana', sans-serif;
     font-size: 24px;
     color: #FF4099;
@@ -141,10 +89,60 @@ body {
 .form-sub-category {
     display: flex;
     width: 70%;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.tags:checked{
+.form-sub-category .tags, .alcohol, .water, .caffeine {
+    padding: 10px;
+}
+
+.mood, .sleep, .eat, .water, .alcohol, .caffeine, .tags{
+    -webkit-appearance: none;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: all .2s ease;
+    outline: none;
+    font-size: 4em; 
+    color:gray;
+}   
+
+.sleep {
+    font-weight: bolder;
+    font-family: 'Timmana', sans-serif;
+}
+
+.mood:hover, .mood:checked, .sleep:hover, .sleep:checked {
+    color: #FF4099;
+}
+
+.water:hover, .water:checked{
+    color: #3153EA;
+}
+
+.eat:hover, .eat:checked{
+    color: #FF4099;
+}
+
+.alcohol:hover, .alcohol:checked{
+    color: #FFD016;
+}
+
+.caffeine:hover, .caffeine:checked{
+    color: rgb(158, 122, 75);
+}
+
+ .tags:checked{
     color: rgb(55, 186, 238);
+}
+
+#caffeine2, #alcohol2, #water2{
+    font-size: 80px;
+}
+
+#caffeine3, #alcohol3, #water3{
+    font-size: 110px;
 }
