--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
-  min-width: 400px;
-  max-width: 800px;
+  margin: 50px 0;
+  padding: 0;
+}
+
+.wrapper {
+  width: 800px;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -59,6 +64,7 @@
   justify-content: space-evenly;
   align-items: center;
   border-radius: 8px;
+  margin-bottom: 40px;
 }
 
 .nav{
