--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -74,3 +74,25 @@
   margin: 0 10vw;
   margin-top: 4vh;
 }
+
+.submit {
+  font-family: 'Timmana', sans-serif;
+  font-size: 22px;
+  color: white;
+  font-weight: bold;
+  height: 5px;
+}
+
+.submitBox{
+  background-color: rgb(255, 64, 153);
+  width: 146px;
+  margin: auto;
+  height: 6vh;
+  border-radius: 8px;
+  margin-top: 30px;
+  display: flex;
+}
+
+.submitBox:hover{
+  background-color: rgb(0, 185, 244);
+}
