--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -71,6 +71,10 @@ code {
     box-sizing: border-box;
 }
 
+#root {
+  margin: 0 500;
+}
+
 body{
     display: flex;
     width: 1000px;
@@ -99,6 +103,18 @@ body{
     align-items: center;
     border-radius: 35px 35px 0 35px;
     width: 700px;
+}
+
+.homeBox{
+    margin: 5px;
+    padding: 45px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 35px 35px 0 35px;
+    width: 700px;
+    height: 500px;
+    overflow: hidden;
 }
 
 .box1{
